--- a/style.css
+++ b/style.css
@@ -4,17 +4,25 @@
   display: flex;
   flex-direction: row; 
   justify-content: space-between;
-   
 }
+
 .menu {
   display: flex;
-  justify-content: space-around;
   flex-direction: row;
+  justify-content: space-around;
+
+
 }
 
 body {
   background-image: url("image/cover.jpg");
   background-size: cover;
+  background-position: center;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 20px;
 }
 
 .flex-body {
