--- a/style.css
+++ b/style.css
@@ -1,21 +1,38 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  font-family: 'Encode Sans Condensed', sans-serif;  
+}
+
+
 .container { 
   background: skyblue;
   background-size: auto;
   display: flex;
   flex-direction: row; 
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .menu {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-
-
+  align-items: flex-end;
 }
 
 body {
-  background-image: url("image/cover.jpg");
+  background-image: url("image/cover2.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -25,11 +42,51 @@ body {
   padding: 0 20px;
 }
 
+h1 {
+  font-size: 30px;
+  font-weight: 600;
+  padding: 0 5px;
+}
+
+h3 {
+  padding: 0 5px;
+}
+
 .flex-body {
   display: flex;
   justify-content: space-around;
   padding: 20px;
   margin-bottom: 20px;
-  background-color: aquamarine;
+ 
 }
 
+.box {
+  background-color: aquamarine;
+  flex: 1;
+  margin: 0 5px;
+  padding: 5px;
+}
+
+.square {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.square-box {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.square-box > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.square-box:hover {
+  padding: 0;
+}
