--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 0 20px;
 }
 
 h1 {
@@ -65,6 +64,7 @@ h3 {
   flex: 1;
   margin: 0 5px;
   padding: 5px;
+  text-align: center;
 }
 
 .square {
@@ -73,7 +73,8 @@ h3 {
 }
 
 .square-box {
-  width: 50%;
+  width: 48vw;
+  height: 48vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,4 +90,27 @@ h3 {
 
 .square-box:hover {
   padding: 0;
+}
+
+.square-line {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.square-boxline {
+  padding: 10px;
+}
+
+.square-boxline > img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+footer {
+  padding: 20px 10px;
+  color: white;
+  text-align: right;
 }
